Don't crash on null response from smbproviderd

- Fixes a nullptr dereference crash when SetupKerberos times out.

Bug: chromium:891517
Change-Id: Ie9394ec31d1f1c640c313a829bd0d99c9f02e48f
Reviewed-on: https://chromium-review.googlesource.com/c/1258216
Commit-Queue: Bailey Berro <baileyberro@chromium.org>
Reviewed-by: Zentaro Kavanagh <zentaro@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596216}
Former-commit-id: f0ef948abd75384b09c997bfe7def2f067af3445